h tag fixes on mobile

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -95,7 +95,7 @@
 
 @media screen and (max-width: 600px) {
     h1 {
-        font-size: 3.25rem;
+        font-size: 3rem;
         margin: .5rem 0 1.5rem;
         line-height:4rem;
     }
@@ -104,6 +104,10 @@
         font-size: 2.5rem;
         margin: 1rem 0;
         line-height: 3rem;
+    }
+
+    #bottom-hero h2 {
+        margin: 1rem 0;
     }
 
     h3 {
