--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -427,7 +427,7 @@ p {
 /* Header Overriders */
 #bottom-hero h2 {
     text-align: center;
-    margin: 3rem 0;
+    margin: 2rem 0;
 }
 
 .bottom-hero .overlay{
